src/objects/Sales__c/fields/Lead_Reseller_Technical_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Reseller_Technical_Rep_Email__c</fullName>
    <description>Lead.Reseller_Technical_Rep_Email</description>
    <label>Lead.Reseller_Technical_Rep_Email</label>
    <type>Email</type>
</CustomField>