src/objects/Sales__c/fields/Lead_Reseller_Technical_Rep_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Reseller_Technical_Rep_Last_Name__c</fullName>
    <description>Lead.Reseller_Technical_Rep_Last_Name</description>
    <label>Lead.Reseller_Technical_Rep_Last_Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>