src/objects/Sales__c/fields/Partner_Community_Access_Request__c.field-meta.xml
<CustomField>
    <fullName>Partner_Community_Access_Request__c</fullName>
    <description>Partner_Community_Access_Request</description>
    <label>Partner_Community_Access_Request</label>
    <length>20</length>
    <type>Text</type>
</CustomField>